# issue-ops

./: .gitignore  README.md  adapters.json  bots.json  config.json  ic.yaml  package-lock.json  package.json  plugins.json  pyproject.toml  requirements.txt  test.py  trigger.yaml
.github/ISSUE_TEMPLATE/: automatic_review.yaml  config.yml  marketplace_submission.yaml
.github/actions-scripts/: file.js  validate.js
.github/actions_scripts/: __init__.py  file.py  main.py  parse.py  plugin_test.py  test.py  utils.py
.github/workflows/: deploy.yaml  ic.yaml  test.yaml  trigger.yaml  validate.yaml  validation.yaml
.github/workflows/templates/: plugin-not-accepted.md  validation-failed.md  validation-succeeded.md
.github/workflows_/: validation.yaml
8/: article.md  config.json
